// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostItCard component renders correctly 1`] = `
<div>
  <div
    class="ColorPair-root-5 ColorPair-pearl-7"
  >
    <div
      class="PostItCard-root-1"
    >
      <div
        class="PostItCard-section-2"
      >
        <h4
          class="MuiTypography-root Typography-root-31 Typography-underline-33 MuiTypography-h4"
          data-testid="typography"
        >
          Heading 1
        </h4>
        <div
          class="PostItCard-content-3"
        >
          Content
        </div>
        <div
          class="PostItCard-action-4"
        >
          Action
        </div>
      </div>
      <div
        class="PostItCard-section-2"
      >
        <h4
          class="MuiTypography-root Typography-root-31 Typography-underline-33 MuiTypography-h4"
          data-testid="typography"
        >
          Heading 2
        </h4>
        <div
          class="PostItCard-content-3"
        >
          Content
        </div>
        <div
          class="PostItCard-action-4"
        >
          Action
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostItCard component renders with different color pair 1`] = `
<div>
  <div
    class="ColorPair-root-43 ColorPair-blue900-57"
  >
    <div
      class="PostItCard-root-39"
    >
      <div
        class="PostItCard-section-40"
      >
        <h4
          class="MuiTypography-root Typography-root-69 Typography-underline-71 MuiTypography-h4"
          data-testid="typography"
        >
          Heading 1
        </h4>
        <div
          class="PostItCard-content-41"
        >
          Content
        </div>
        <div
          class="PostItCard-action-42"
        >
          Action
        </div>
      </div>
      <div
        class="PostItCard-section-40"
      >
        <h4
          class="MuiTypography-root Typography-root-69 Typography-underline-71 MuiTypography-h4"
          data-testid="typography"
        >
          Heading 2
        </h4>
        <div
          class="PostItCard-content-41"
        >
          Content
        </div>
        <div
          class="PostItCard-action-42"
        >
          Action
        </div>
      </div>
    </div>
  </div>
</div>
`;
